syntax = "proto3";

package example;

option go_package = "github.com/jrione/go-app-boilerplate/proto";

service ExampleService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}